# DuckDL

./: README.md
backend/: .gitignore  Makefile  celeryconfig.py  main.py  pyproject.toml  requirements.txt  schema.prisma  worker.py
backend/app/: config.py  main.py  prisma.py
backend/app/models/: pagination.py  schemas.py
backend/app/routers/: account.py  download.py  log.py  platform.py  setting.py
backend/app/scripts/: __init__.py  alura.py  base.py
backend/app/scripts/base/: constants.py  node.py  platform.py  session.py  utils.py
backend/app/scripts/node/: __init__.py  alura.py
backend/app/scripts/platform/: __init__.py  alura.py
backend/app/services/: __init__.py  account.py  account_service.py  log.py  node.py
backend/app/tasks/: __init__.py  account.py  base.py
frontend/: app.vue  constants.ts  nuxt.config.ts  package-lock.json  package.json  types.ts
frontend/components/: AccountActions.vue  AccountSelectProductModal.vue  AccountsTable.vue  AddAccountForm.vue  AddAccountModal.vue  HorizontalNavBar.vue  SelectProductMethodsHelp.vue
frontend/pages/: downloads.vue  index.vue  logs.vue  settings.vue
frontend/utils/: account.ts  node.ts  tools.ts
