[tool.poetry]
name = "coursesdownloader-backend"
version = "0.1.0"
description = ""
authors = ["Felipe Adeildo <felipe.adeildo0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
prisma = "^0.13.1"
fastapi = "^0.111.0"
requests = "^2.32.3"
celery = "^5.4.0"
uvicorn = "^0.30.0"
pydantic-settings = "^2.2.1"
cloudscraper = "^1.2.71"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
